// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1rwlq8b"
  >
    default Badge
  </div>
</div>
`;

exports[`Storyshots appearance stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-18uz01l"
  >
    stroke Badge
  </div>
</div>
`;

exports[`Storyshots color blue default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-qko9jh"
  >
    blue default Badge
  </div>
</div>
`;

exports[`Storyshots color blue stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1nf2brk"
  >
    blue stroke Badge
  </div>
</div>
`;

exports[`Storyshots color gray default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1rwlq8b"
  >
    gray default Badge
  </div>
</div>
`;

exports[`Storyshots color gray stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-18uz01l"
  >
    gray stroke Badge
  </div>
</div>
`;

exports[`Storyshots color green default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-eqw0k5"
  >
    green default Badge
  </div>
</div>
`;

exports[`Storyshots color green stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1ijjyd4"
  >
    green stroke Badge
  </div>
</div>
`;

exports[`Storyshots color red default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-6kw6e4"
  >
    red default Badge
  </div>
</div>
`;

exports[`Storyshots color red stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1en6ax5"
  >
    red stroke Badge
  </div>
</div>
`;

exports[`Storyshots color yellow default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-y1rz6v"
  >
    yellow default Badge
  </div>
</div>
`;

exports[`Storyshots color yellow stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-10iae72"
  >
    yellow stroke Badge
  </div>
</div>
`;
